Правка location для "прод". Добавлены zip & unzip библиотеки.

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -25,8 +25,11 @@ server {
         fastcgi_param DOCUMENT_ROOT $realpath_root;
     }
     # PROD
-    location ~ ^/app\.php(/|$) {
+    # в оригинале location ~ ^/app\.php(/|$) {
+    # убрал из-за запросов вида "http://172.29.134.38:8081/config/default/default/box/main.php"
+    location ~ ^/app\.php {
         fastcgi_pass app:9000;
+        # ^(http:\/\/[^/]+\/app.php)(\/.*)$
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         # When you are using symlinks to link the document root to the
@@ -46,9 +49,10 @@ server {
 
     # return 404 for all other php files not matching the front controller
     # this prevents access to other php files you don't want to be accessible.
-    location ~ \.php$ {
-      return 404;
-    }
+    # убрал из-за запросов вида "http://172.29.134.38:8081/config/default/default/box/main.php"
+    #location ~ \.php$ {
+    #  return 404;
+    #}
 
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
